Mutators can now conflict with classes